[package]
name = "aclint"
description = "Provide structs and methods to operate riscv aclint device."
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/aclint.git"
documentation = "https://docs.rs/aclint"
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"
keywords = ["riscv"]
categories = ["embedded", "hardware-support", "no-std"]
